# llmwalk

./: README.md  llmstream.py  llmtree.py  pyproject.toml
llmwalk/: cli.py  llm.py
prompts/: capital-france.txt  color-sky.txt  largest-planet.txt  two-plus-two.txt
tests/: test_prompts.py
tests/__snapshots__/test_prompts/: test_prompt_snapshot[capital-france].json  test_prompt_snapshot[color-sky].json  test_prompt_snapshot[default-capital-france].json  test_prompt_snapshot[default-color-sky].json  test_prompt_snapshot[default-largest-planet].json  test_prompt_snapshot[default-two-plus-two].json  test_prompt_snapshot[largest-planet].json  test_prompt_snapshot[lfm2-capital-france].json  test_prompt_snapshot[lfm2-color-sky].json  test_prompt_snapshot[lfm2-largest-planet].json  test_prompt_snapshot[lfm2-two-plus-two].json  test_prompt_snapshot[mistral-capital-france].json  test_prompt_snapshot[mistral-color-sky].json  test_prompt_snapshot[mistral-largest-planet].json  test_prompt_snapshot[mistral-two-plus-two].json  test_prompt_snapshot[two-plus-two].json
