[build-system]
requires = ["hatchling>=1.22.0"]
build-backend = "hatchling.build"

[project]
name = "llmwalk"
version = "0.1.1"
description = "Explore the answer-space for any prompt and any MLX-supported model."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mlx-lm==0.28.4",
  "rich==14.2.0",
  "sortedcontainers==2.4.0",
]

[project.scripts]
llmwalk = "llmwalk.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["llmwalk"]
